<resources>
    <string name="app_name">Calorie Counter</string>
    <string name="title_text">Calorie Counter</string>
    <string name="hint_food">What did you eat?</string>
    <string name="hint_calories">Calorie Count</string>
    <string name="Submit_text">Submit</string>
    <string name="delete_item">Delete Item</string>
    <string name="share_title">Share</string>
    <string name="food_total_text">Total Calories: </string>
    <string name="cal_text">Cal.</string>
    <string name="food_items_num">Food Items:</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="title_activity_display_foods">DisplayFoodsActivity</string>
    <string name="pipe">|</string>
    <string name="title_activity_food_item_details">FoodItemDetailsActivity</string>
    <string name="Enter_activity_details">Enter Your Food</string>
    <string name="my_food_list">My Food List</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_youtube">YoutubeActivity</string>
</resources>
