<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4286f4"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="Activities.MainActivity">


    <TextView
        android:id="@+id/title_text"
        android:text="@string/Enter_activity_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_below="@id/title_text"
        android:layout_centerHorizontal="true"
        android:src="@drawable/food"
        android:layout_width="150dp"
        android:layout_height="150dp" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="9dp"
        android:background="@drawable/row_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/foodEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:hint="@string/hint_food"
            android:padding="14dp"></EditText>

        <EditText
            android:id="@+id/caloriesEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:hint="@string/hint_calories"
            android:inputType="number"
            android:padding="14dp"></EditText>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/Submit_text" />

        <Button
            android:id="@+id/myFoodList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/layout"
            android:layout_marginTop="1dp"
            android:text="@string/my_food_list" />

        <Button
            android:id="@+id/seeVideoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/myFoodList"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="119dp"
            android:layout_marginLeft="119dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="114dp"
            android:layout_marginRight="114dp"
            android:text="Simple Workout Routine" />

    </LinearLayout>



</RelativeLayout>
