<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="Activities.DisplayFoodsActivity">

<LinearLayout
    android:id="@+id/linearLayout"
    android:background="#00ACC1"
    android:padding="12dp"
    android:paddingTop="12dp"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/totalAmountTextView"
        android:layout_width="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_height="wrap_content"
        android:textColor="#FFF3F6FF"
        android:textStyle="bold"
        android:paddingRight="10dp"
        android:text="@string/food_total_text" />

    <TextView
        android:text="@string/pipe"
        android:textColor="#FFEE1D27"
        android:textSize="27sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/totalItemsTextView"
        android:textColor="#FF212121"
        android:textStyle="bold"
        android:layout_marginLeft="5dp"
        android:text="@string/food_items_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_below="@+id/linearLayout"
        android:divider="#212121"
        android:dividerHeight="2dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ListView>


</RelativeLayout>